# RockS.T.A.R.

./: .gitignore  LICENSE  README.md  justfile  main.py  pyproject.toml
app/: app.py  chat.py  database_manager.py  logconfig.py  openai_api.py  rockstar.sqlite
app/templates/: langui.html  output.html
rockstar/: __init__.py  app.py  database_manager.py  logconfig.py  models.py  openai_api.py  openai_client.py  routes.py  service.py
rockstar/models/: models.py
rockstar/routes/: routes.py
rockstar/templates/: _messages.html  assistant_message.html  base.html  chat.html  index.html  langui.html  user_message.html
