[tool.poetry]
name = "RockS.T.A.R."
version = "0.1.0"
description = "A web application for practicing S.T.A.R. interviews with AI"
authors = ["Joshua Oliphant <joshua.oliphant@hey.com>"]
readme = "README.md"
packages = [{include = "rockstar"}]

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
openai = "^1.7.2"
sqlalchemy = "^2.0.25"
rich = "^13.7.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
flask-session = "^0.6.0"
backoff = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
